# VoiceServer

./: .gitignore  CMakeLists.txt  Dockerfile  docker-compose.yaml  voice_client_config.json  voice_server_config.json
src/: codebase.md
src/client/: AudioManager.h  NetworkManager.h  VoiceChatClient.h  main_client.cpp
src/common/: AsioThreadPool.h  AudioPacket.h  BinaryData.h  Config.h  Logger.cpp  Logger.h  Utilities.h  WebSocketServer.h  WebSocketSession.h
src/server/: AudioMixer.h  Client.h  Connection.h  RoomManager.h  main_server.cpp
src/websocket/: main.cpp  test.html
src/websocket/basic_text/: main.cpp  test.html
src/websocket/voice_client/: index.html  test.html  voice-processor.js
src/websocket/voice_client/static/: voice-processor.js
